Fix responsiveness on program dashboard.
- Make programs cards not overflow when the number of connections it too big.

--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -30,7 +30,7 @@ mat-card.program {
 .program-data {
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: max-content auto;
+    grid-template-columns: max-content 1fr;
 }
 
 .program-data > .program-type {
@@ -61,8 +61,9 @@ mat-card.program > .program-data > .connection-icon-list {
 mat-card.program > .program-data > .card-title {
     grid-row: 1;
     grid-column: 2;
+    word-break: break-word;
 
-    padding: 1em;
+    padding: 1ex;
     font-weight: 600;
 }
 
@@ -150,7 +151,7 @@ mat-card.program > .program-operation > .enable-program {
 
 .user-connections > .connection-list > div > mat-card > .connection-name {
     display: inline-block;
-    height: 3ex;
+    min-height: 3ex;
 }
 
 
@@ -206,5 +207,5 @@ mat-card.example > .description {
     background-color: #fff;
     box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.3);
     border-radius: 3px;
-    height: 3ex;
+    min-height: 3ex;
 }
